@@ -1,5 +1,13 @@
 2008-08-04  Tor Lillqvist  <tml@novell.com>
 
+	* glib/gmain.c (g_get_current_time): MSDN says: "Do not cast a
+	pointer to a FILETIME structure to either a LARGE_INTEGER* or
+	__int64* value because it can cause alignment faults on 64-bit
+	Windows." So don't do that then. Indeed the code did work randomly
+	on Win64 when compiled with optimisation.
+
+2008-08-04  Tor Lillqvist  <tml@novell.com>
+
 	* glib/giowin32.c
 	* glib/gmain.c
 	* glib/gspawn-win32.c
